// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should mount Component when has name 1`] = `
<div>
  <div
    class="card"
  >
    <span
      class="card-name"
    >
      pikachu
    </span>
  </div>
</div>
`;

exports[`Card should mount Component when not has name 1`] = `
<div>
  <div
    class="card"
  >
    <span>
      nao há card
    </span>
  </div>
</div>
`;
